[project]
name = "fxguard"
version = "0.1.0"
requires-python = "~=3.13"

[tool.poetry]
packages = [{ include = "fxguard", from = "src" }]

[tool.poetry.dependencies]
numpy = "<2.3.0"
pandas = "^2.3.0"
scipy = "^1.15.3"
matplotlib = "^3.10.3"
httpx = "^0.28.1"
bs4 = "^0.0.2"
scikit-learn = "^1.7.0"
seaborn = "^0.13.2"
ruff = "^0.12.0"
nbstripout = "^0.8.1"
ipykernel = "^6.29.5"
torch = "2.6.0"
statsmodels = "^0.14.4"
optuna = "^4.4.0"
python-dotenv = "^1.1.0"
lightning = "^2.5.2"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
optuna-integration = {extras = ["pytorch-lightning"], version = "^4.4.0"}
psycopg2-binary = "^2.9.10"
jupyterlab = "^4.4.4"
ipywidgets = "^8.1.7"
mlflow = "^3.1.1"
databricks-sdk = "^0.58.0"
yfinance = "^0.2.65"
darts = "^0.36.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
